--- a/.azure-pipelines/batch-generation.yml
+++ b/.azure-pipelines/batch-generation.yml
@@ -1,9 +1,3 @@
-parameters:
-- name: AutorestVersion
-  displayName: 'Version of Autorest that trigger batch generation'
-  type: string
-  default: '4.x.x'
-
 variables:
   IntermediateStepTimeoutInMinutes: 30
   GenerateTimeoutInMinutes: 120
@@ -22,6 +16,13 @@ variables:
   MacOSAgentPoolVMImage: macOS-latest
 
 trigger: none
+
+resources:
+  pipelines:
+    - pipeline: pipelineA
+      project: release 
+      source: pipelineA  
+      trigger: true
 
 stages:
   - stage: Generate
@@ -106,8 +107,14 @@ stages:
             git fetch origin "$(GenerationBranch)"
             git checkout "$(GenerationBranch)"
 
+            $autorestPowershellUrl = "https://registry.npmjs.org/@autorest/powershell"
+            $response = Invoke-RestMethod -Uri $autorestPowershellUrl -Method Get
+            $latestAutorestVersion = $response.'dist-tags'.latest
+            Write-Host "Latest version of Autorest Powershell is $latestAutorestVersion"
+            Write-Host "##vso[task.setvariable variable=LatestAutorestVersion;isOutput=true]$latestAutorestVersion"
+
             $batchGenerateModulesPath = Join-Path "$(Build.SourcesDirectory)" '.azure-pipelines' 'PipelineSteps' 'BatchGeneration' 'batch-generate-modules.ps1'
-            & $batchGenerateModulesPath -MatrixKey "$(MatrixKey)" -RepoRoot "$(Build.SourcesDirectory)" -AutorestVersion "${{ parameters.AutorestVersion }}"
+            & $batchGenerateModulesPath -MatrixKey "$(MatrixKey)" -RepoRoot "$(Build.SourcesDirectory)" -AutorestVersion $latestAutorestVersion
           workingDirectory: $(Build.SourcesDirectory)
 
       - task: PublishPipelineArtifact@1
@@ -122,6 +129,7 @@ stages:
     condition: always()
     variables:
       GenerationBranch: $[stageDependencies.Generate.prepare.outputs['checkout.GenerationBranch']]
+      LatestAutorestVersion: $[stageDependencies.Generate.generate.outputs['generate.LatestAutorestVersion']]
     jobs:
     - job: filter
       displayName: 'Filter Changed Modules'
@@ -170,7 +178,7 @@ stages:
             }
             
             git add .
-            git commit -m "Autorest Upgrade - ${{ parameters.AutorestVersion }}"
+            git commit -m "Autorest Upgrade - $(GenerationBranch)"
             git push origin "$(GenerationBranch)"
 
       - task: PowerShell@2
